0.4.15/_sources/gallery/nD_shapes_with_text.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/nD_shapes_with_text.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_nD_shapes_with_text.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_nD_shapes_with_text.py:


nD shapes with text
===================

.. GENERATED FROM PYTHON SOURCE LINES 6-32



.. image-sg:: /gallery/images/sphx_glr_nD_shapes_with_text_001.png
   :alt: nD shapes with text
   :srcset: /gallery/images/sphx_glr_nD_shapes_with_text_001.png
   :class: sphx-glr-single-img





.. code-block:: default

    from skimage import data
    import napari


    blobs = data.binary_blobs(
        length=100, blob_size_fraction=0.05, n_dim=3, volume_fraction=0.03
    ).astype(float)

    viewer = napari.view_image(blobs.astype(float), ndisplay=3)

    n = 50
    shape = [[[n, 40, 40], [n, 40, 60], [n + 20, 60, 60], [n + 20, 60, 40]]]

    features = {'z_index': [n]}
    text = {'string': 'z_index', 'color': 'green', 'anchor': 'upper_left'}

    shapes_layer = viewer.add_shapes(
        shape,
        edge_color=[0, 1, 0, 1],
        face_color='transparent',
        features=features,
        text=text,
    )

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_nD_shapes_with_text.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: nD_shapes_with_text.py <nD_shapes_with_text.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: nD_shapes_with_text.ipynb <nD_shapes_with_text.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
